--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <li class="team_profile">
             <a class="ex" href="#">
               <p class="team_name">
-                YERIN BOK
+                YELIN BOK
               </p>
               <div class="circle">
                 <img class="team_photo" src="./img/yelinbok_1.png" alt="profile_img">
