--- a/detail.html
+++ b/detail.html
@@ -239,7 +239,7 @@
                     <div>About me</div>
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
-                        <div class="tag">INTP</div>
+                        <div class="tag">INFP</div>
                         <div class="tag">특징</div>
                       </div>
                       <div class="aboutMe__tag">
@@ -419,7 +419,7 @@
                     <div>About me</div>
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
-                        <div class="tag">INTP</div>
+                        <div class="tag">ISTJ</div>
                         <div class="tag">특징</div>
                       </div>
                       <div class="aboutMe__tag">
